@@ -26,22 +26,43 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
+//解决window平台下中文乱码问题
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
 test {
     useJUnitPlatform()
 }
-
-
 
 
 javafx {
     version = "13"
     modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
 }
-/*application {
+
+application {
     mainModule = 'erp.main'
     mainClassName = 'org.rainday.erp.jfoenix.JfoenixApp'
-}*/
-mainClassName = "$moduleName/org.rainday.erp.jfoenix.JfoenixApp"
+
+    applicationDefaultJvmArgs = [
+//            "-Dprism.order=d3d,es2,es1,sw,j2d",
+//            "-Dsun.java2d.opengl=true",
+//            "-Dprism.forceGPU=true",
+//            "-Dprism.lcdtext=true",
+//            "-Dprism.vsync=false",
+
+            "--add-opens=java.base/java.lang.reflect=com.jfoenix",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+
+            "--illegal-access=warn"
+    ]
+}
 
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
